--- a/GaneEcommerce.Data/Ganedata.Core.Data.csproj
+++ b/GaneEcommerce.Data/Ganedata.Core.Data.csproj
@@ -1171,6 +1171,10 @@
     <Compile Include="Migrations\202011031458485_added-price-calculation-configs-to-TenantConfigs-table.designer.cs">
       <DependentUpon>202011031458485_added-price-calculation-configs-to-TenantConfigs-table.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202011091020383_added-some-LoyaltyApp-configs-to-TenantConfigs-table.cs" />
+    <Compile Include="Migrations\202011091020383_added-some-LoyaltyApp-configs-to-TenantConfigs-table.designer.cs">
+      <DependentUpon>202011091020383_added-some-LoyaltyApp-configs-to-TenantConfigs-table.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="Helpers\DataImportFactory.cs" />
     <Compile Include="IApplicationContext.cs" />
@@ -2369,6 +2373,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202011031458485_added-price-calculation-configs-to-TenantConfigs-table.resx">
       <DependentUpon>202011031458485_added-price-calculation-configs-to-TenantConfigs-table.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202011091020383_added-some-LoyaltyApp-configs-to-TenantConfigs-table.resx">
+      <DependentUpon>202011091020383_added-some-LoyaltyApp-configs-to-TenantConfigs-table.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
