Address line 4 removed from PTenants, PLandlords and Tenant Locations

--- a/GaneEcommerce.Data/Ganedata.Core.Data.csproj
+++ b/GaneEcommerce.Data/Ganedata.Core.Data.csproj
@@ -1175,6 +1175,10 @@
     <Compile Include="Migrations\202011091020383_added-some-LoyaltyApp-configs-to-TenantConfigs-table.designer.cs">
       <DependentUpon>202011091020383_added-some-LoyaltyApp-configs-to-TenantConfigs-table.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202011200721511_address-line-4-dropped-from-PTenants-PLandlords-and-tenant-locations.cs" />
+    <Compile Include="Migrations\202011200721511_address-line-4-dropped-from-PTenants-PLandlords-and-tenant-locations.designer.cs">
+      <DependentUpon>202011200721511_address-line-4-dropped-from-PTenants-PLandlords-and-tenant-locations.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="Helpers\DataImportFactory.cs" />
     <Compile Include="IApplicationContext.cs" />
@@ -2376,6 +2380,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202011091020383_added-some-LoyaltyApp-configs-to-TenantConfigs-table.resx">
       <DependentUpon>202011091020383_added-some-LoyaltyApp-configs-to-TenantConfigs-table.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202011200721511_address-line-4-dropped-from-PTenants-PLandlords-and-tenant-locations.resx">
+      <DependentUpon>202011200721511_address-line-4-dropped-from-PTenants-PLandlords-and-tenant-locations.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
