--- a/WMS/Web.config
+++ b/WMS/Web.config
@@ -57,7 +57,7 @@
     <!--connection strings for Development Laptop-->
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEV-LAPTOP2;Initial Catalog=BecscoLiveV1.3000;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" />-->
     <!--connection strings for Sattar Laptop-->
-    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEV-LAPTOP3;Initial Catalog=IcestoneLiveV1.2095;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" />
+	  <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEV-LAPTOP3;Initial Catalog=IcestoneLiveV1.2095;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" />
     <!--connection strings for Development PC-->
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEVELOPMENT-PC2;Initial Catalog=IceStoneOrderingV1.2874;Integrated Security=False;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" />-->
     <!--connection strings for Naveed PC-->
@@ -106,6 +106,10 @@
     <add key="MerakiSecretKey" value="1d9399b50f91cf1672d709744e3d70b93083eb04" />
     <add key="SMSBroadcastUser" value="Ganedata01" />
     <add key="SMSBroadcastPassword" value="92DqXS3tfh" />
+	<add key="DeliverectApiUrl" value="https://api.staging.deliverect.com" />
+	<add key="DeliverectClientId" value="TbCfZobd7Dbh3RAD" />
+	<add key="DeliverectClientSecretKey" value="pmNHmyaCxdatNiCOeT7PsRFsTZNxjCtk" />
+	<add key="DeliverectScope" value="ganedata" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
