Added flexible shifts and overtime allowance gonfigs to Resources and use them in time log calculations

--- a/GaneEcommerce.Data/Ganedata.Core.Data.csproj
+++ b/GaneEcommerce.Data/Ganedata.Core.Data.csproj
@@ -1191,6 +1191,10 @@
     <Compile Include="Migrations\202012011310158_added-IsInternalWebsite-field-to-TenantWebsites-table.designer.cs">
       <DependentUpon>202012011310158_added-IsInternalWebsite-field-to-TenantWebsites-table.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202012071404406_added-new-time-and-attendance-related-fields-to-Resources-table.cs" />
+    <Compile Include="Migrations\202012071404406_added-new-time-and-attendance-related-fields-to-Resources-table.designer.cs">
+      <DependentUpon>202012071404406_added-new-time-and-attendance-related-fields-to-Resources-table.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="Helpers\DataImportFactory.cs" />
     <Compile Include="IApplicationContext.cs" />
@@ -2404,6 +2408,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202012011310158_added-IsInternalWebsite-field-to-TenantWebsites-table.resx">
       <DependentUpon>202012011310158_added-IsInternalWebsite-field-to-TenantWebsites-table.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202012071404406_added-new-time-and-attendance-related-fields-to-Resources-table.resx">
+      <DependentUpon>202012071404406_added-new-time-and-attendance-related-fields-to-Resources-table.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
