--- a/WMS/Web.config
+++ b/WMS/Web.config
@@ -57,7 +57,8 @@
     <!--connection strings for Development Laptop-->
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEV-LAPTOP2;Initial Catalog=BecscoLiveV1.3000;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" />-->
     <!--connection strings for Sattar Laptop-->
-    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=LAPTOP-R0BRRUC;Initial Catalog=RegalsLiveV1.4003;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" />
+	  <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-ISJ0IF7;Initial Catalog=IcestoneLiveV1.2095;Trusted_Connection=True" />
+    <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEV-LAPTOP3;Initial Catalog=IcestoneLiveV1.2095;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" />-->
     <!--connection strings for Development PC-->
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEVELOPMENT-PC2;Initial Catalog=IceStoneOrderingV1.2874;Integrated Security=False;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" />-->
     <!--connection strings for Naveed PC-->
