Product Location Stock Table and API added

--- a/GaneEcommerce.Data/Ganedata.Core.Data.csproj
+++ b/GaneEcommerce.Data/Ganedata.Core.Data.csproj
@@ -1195,6 +1195,10 @@
     <Compile Include="Migrations\202012071404406_added-new-time-and-attendance-related-fields-to-Resources-table.designer.cs">
       <DependentUpon>202012071404406_added-new-time-and-attendance-related-fields-to-Resources-table.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202012110216160_ProductLocationStocks-table-added-for-location-stock-calculations.cs" />
+    <Compile Include="Migrations\202012110216160_ProductLocationStocks-table-added-for-location-stock-calculations.designer.cs">
+      <DependentUpon>202012110216160_ProductLocationStocks-table-added-for-location-stock-calculations.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="Helpers\DataImportFactory.cs" />
     <Compile Include="IApplicationContext.cs" />
@@ -2411,6 +2415,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202012071404406_added-new-time-and-attendance-related-fields-to-Resources-table.resx">
       <DependentUpon>202012071404406_added-new-time-and-attendance-related-fields-to-Resources-table.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202012110216160_ProductLocationStocks-table-added-for-location-stock-calculations.resx">
+      <DependentUpon>202012110216160_ProductLocationStocks-table-added-for-location-stock-calculations.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
