--- a/GaneEcommerce.Entities/Ganedata.Core.Entities.csproj
+++ b/GaneEcommerce.Entities/Ganedata.Core.Entities.csproj
@@ -201,6 +201,7 @@
     <Compile Include="Domain\Auth\AuthUserprofile.cs" />
     <Compile Include="Domain\Auth\Module.cs" />
     <Compile Include="Domain\ImportModels\DeliverectModels.cs" />
+    <Compile Include="Domain\Models\ProductLocationStocks.cs" />
     <Compile Include="Domain\Shifts\ShiftSchedule.cs" />
     <Compile Include="Domain\ImportModels\ParentChildProductsAssociationsImportModel.cs" />
     <Compile Include="Domain\ImportModels\ProductImportModel.cs" />
@@ -240,6 +241,7 @@
     <Compile Include="Domain\Models\ProductManufacturer.cs" />
     <Compile Include="Domain\Models\UISettingItem.cs" />
     <Compile Include="Domain\Models\UISetting.cs" />
+    <Compile Include="Domain\ViewModels\ApiModels\ProductLocationStocksSync.cs" />
     <Compile Include="Domain\ViewModels\ProductPriceViewModel.cs" />
     <Compile Include="Domain\ViewModels\ProductSearchResultViewModel.cs" />
     <Compile Include="Domain\ViewModels\ApiCredentialsViewModel.cs" />
