Feedback Api endpoints - code reviews, api routes and migrations

--- a/WMS/Web.config
+++ b/WMS/Web.config
@@ -57,7 +57,7 @@
     <!--connection strings for Development Laptop-->
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEV-LAPTOP2;Initial Catalog=BecscoLiveV1.3000;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" />-->
     <!--connection strings for Sattar Laptop-->
-	  <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-ISJ0IF7;Initial Catalog=IcestoneLiveV1.2095;Trusted_Connection=True" />
+	  <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=.;Initial Catalog=IcestoneLiveV1.2095;Trusted_Connection=True" />
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEV-LAPTOP3;Initial Catalog=IcestoneLiveV1.2095;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" />-->
     <!--connection strings for Development PC-->
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEVELOPMENT-PC2;Initial Catalog=IceStoneOrderingV1.2874;Integrated Security=False;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" />-->
@@ -123,7 +123,7 @@
     <!--Start session string Development-Laptop-->
     <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DEV-LAPTOP2;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" timeout="300" />-->
     <!--Start session string Sattar-Laptop-->
-    <sessionState mode="SQLServer" sqlConnectionString="Data Source=DEV-LAPTOP3;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" timeout="300" />
+    <sessionState mode="SQLServer" sqlConnectionString="Data Source=.;User ID=pharmix;Password=Pharmix123#;Integrated Security=False;MultipleActiveResultSets=True" timeout="300" />
     <!--Start session string Naveed PC-->
     <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DESKTOP-H9GO0QC\SQLSERVER2019;Integrated Security=false;User Id=sa;Password=developer;MultipleActiveResultSets=True;" timeout="300" />-->
     <!--Start session string UMER PC-->
