TenantLocation updates for delivery price and Adyen integration in progress

--- a/GaneEcommerce.Services/Ganedata.Core.Services.csproj
+++ b/GaneEcommerce.Services/Ganedata.Core.Services.csproj
@@ -352,6 +352,7 @@
     <Compile Include="AccountSectors\IAccountSectorService.cs" />
     <Compile Include="Activity\ActivityServices.cs" />
     <Compile Include="Activity\IActivityServices.cs" />
+    <Compile Include="Adyen\IAdyenPaymentService.cs" />
     <Compile Include="Assets\AssetServices.cs" />
     <Compile Include="Assets\IAssetServices.cs" />
     <Compile Include="Core\Auth\caCurrencyDetail.cs" />
